--- a/LayoutTests/fast/dom/Document/clone-node.html
+++ b/LayoutTests/fast/dom/Document/clone-node.html
@@ -13,10 +13,12 @@ var doc = document.implementation.createDocument('', 'root', null);
 shouldBe('doc.cloneNode(false).__proto__', 'XMLDocument.prototype');
 shouldBeEqualToString('className(doc.cloneNode(false))', 'XMLDocument');
 shouldBeEqualToString('doc.cloneNode(true).documentElement.localName', 'root');
+shouldBeEqualToString('doc.cloneNode(true).contentType', 'application/xml');
 shouldBeEqualToString('document.cloneNode(true).compatMode', 'CSS1Compat');
 shouldBe('document.cloneNode(false).URL', 'document.URL');
 shouldBe('document.cloneNode(false).baseURI', 'document.baseURI');
 shouldBe('document.cloneNode(false).characterSet', 'document.characterSet');
+shouldBeEqualToString('document.cloneNode(true).contentType', 'text/html');
 
 </script>
 </body>
