--- a/LayoutTests/fast/forms/associatedFormControls-leak-nodes.html
+++ b/LayoutTests/fast/forms/associatedFormControls-leak-nodes.html
@@ -8,19 +8,26 @@
 if (!window.internals) {
     debug("This test only runs on \"content_shell --dump-render-tree\", as it requires existence of window.internals.");
 } else {
-    gc();
-    var documentsBefore = window.internals.numberOfLiveDocuments();
+    testRunner.waitUntilDone();
+    window.jsTestIsAsync = true;
+    var documentsBefore;
+    var documentsAfter;
+    collectGarbage(function() {
+        documentsBefore = window.internals.numberOfLiveDocuments();
 
-    var frame = document.getElementById('frame');
-    frame.contentDocument.body.innerHTML = '<form></form>';
-    document.body.removeChild(frame);
-    frame = null;
+        var frame = document.getElementById('frame');
+        frame.contentDocument.body.innerHTML = '<form></form>';
+        document.body.removeChild(frame);
+        frame = null;
 
-    gc();
-    var documentsAfter = window.internals.numberOfLiveDocuments();
+        collectGarbage(function() {
+            documentsAfter = window.internals.numberOfLiveDocuments();
 
-    // -1 is from removing frame itself.
-    shouldBe('documentsBefore - 1', 'documentsAfter');
+            // -1 is from removing frame itself.
+            shouldBe('documentsBefore - 1', 'documentsAfter');
+            finishJSTest();
+        });
+    });
 }
 </script>
 </body>
