Cleanup inspector test expectations
BUG=344238,257132,280698,308952,333882,339252,313783,352466,351696
NOTRY=true

Review URL: https://codereview.chromium.org/221833004

git-svn-id: svn://svn.chromium.org/blink/trunk@170650 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/inspector/network/network-xhr-replay.html
+++ b/LayoutTests/http/tests/inspector/network/network-xhr-replay.html
@@ -37,7 +37,7 @@ function test()
 
         function step1()
         {
-            InspectorTest.makeXHR(method, url, async, user, password, headers, withCredentials, payload, step2);
+            InspectorTest.makeXHR(method, url, async, user, password, headers, withCredentials, payload, type, step2);
         }
 
         var originalRequest;
