DevTools: Attempt to make http/tests/inspector/elements/styles/selector-line-sourcemap-header-deprecated.html non-flaky
R=pfeldman, vsevik
NOTRY=true

Review URL: https://codereview.chromium.org/221933005

git-svn-id: svn://svn.chromium.org/blink/trunk@170652 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/inspector/elements/styles/selector-line-sourcemap-header-deprecated.html
+++ b/LayoutTests/http/tests/inspector/elements/styles/selector-line-sourcemap-header-deprecated.html
@@ -15,7 +15,7 @@ function addStylesheet()
 function test()
 {
     WebInspector.settings.cssSourceMapsEnabled.get = function() { return true; }
-    WebInspector.cssModel.addEventListener(WebInspector.CSSStyleModel.Events.StyleSheetAdded, step1, this);
+    InspectorTest.addSniffer(WebInspector.SASSSourceMapping.prototype, "_bindUISourceCode", step1);
     InspectorTest.evaluateInPage("addStylesheet()");
 
     function step1()
