Expose ImageData on WorkerGlobalScope.
Follow the spec and also provide the ImageData interface object on
WorkerGlobalScope.

R=junov@chromium.org,eseidel@chromium.org
BUG=355030

Review URL: https://codereview.chromium.org/216923004

git-svn-id: svn://svn.chromium.org/blink/trunk@170665 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/canvas/canvas-ImageData-workers.html
+++ b/LayoutTests/fast/canvas/canvas-ImageData-workers.html
@@ -4,6 +4,8 @@
 <script src="../../resources/js-test.js"></script>
 </head>
 <body>
-<script src="resources/canvas-ImageData.js"></script>
+<script>
+startWorker("./resources/canvas-ImageData-workers.js");
+</script>
 </body>
 </html>
