DevTools: Make ConsoleMessage TargetAware
BUG=
R=pfeldman@chromium.org

Review URL: https://codereview.chromium.org/222143003

git-svn-id: svn://svn.chromium.org/blink/trunk@170667 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/console/console-timestamp.html
+++ b/LayoutTests/inspector/console/console-timestamp.html
@@ -11,6 +11,7 @@ function test()
     function addMessageWithFixedTimestamp(messageText, timestamp)
     {
         var message = new WebInspector.ConsoleMessage(
+            WebInspector.console.target(),
             WebInspector.ConsoleMessage.MessageSource.Other, // source
             WebInspector.ConsoleMessage.MessageLevel.Log, // level
             messageText,
