Using alt and down key to open datalist using keyboard
On pressing alty+down key, datalist is open and no stepDown is generated.

R=tkent@chromium.org, isherman@chromium.org, keishi1@chromium.org
BUG=229073
TEST= On down+alt key combination does not generate stepDown.

Review URL: https://codereview.chromium.org/218683010

git-svn-id: svn://svn.chromium.org/blink/trunk@170673 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/forms/number/number-keyoperation.html
+++ b/LayoutTests/fast/forms/number/number-keyoperation.html
@@ -25,6 +25,10 @@ debug('Press the down arrow key:');
 eventSender.keyDown('downArrow');
 shouldBe('input.value', '"123"');
 
+debug('Press the down and alt arrow key, should not decrement value:');
+eventSender.keyDown('downArrow', ['altKey']);
+shouldBeEqualToString('input.value', '123');
+
 debug('Disable input element:');
 input.disabled = true;
 eventSender.keyDown('upArrow');
